# allfeat-contracts

examples/aft34_extensions/aft38/: Cargo.toml
examples/aft34_extensions/aft38/src/: lib.rs
examples/aft38/: Cargo.lock.bkp  Cargo.toml  README.md
examples/aft38/contracts/aft38/: Cargo.toml
examples/aft38/contracts/logics/: Cargo.toml
examples/aft38/contracts/logics/traits/: payable_mint.rs
examples/aft38/src/: lib.rs
examples/aft38/target.bkp/: .rustc_info.json
examples/aft38/target.bkp/__openbrush_metadata_folder/: AFT22  AFT22Burnable  AFT22Capped  AFT22Metadata  AFT22Mintable  AFT22TokenTimelock  AFT22Wrapper  AFT34  AFT34ALBUMStorage  AFT34Burnable  AFT34Enumerable  AFT34Metadata  AFT34Mintable  AFT34URIStorage  AFT37  AFT37Batch  AFT37Burnable  AFT37Enumerable  AFT37Metadata  AFT37Mintable  FlashBorrower  FlashLender  Governor  GovernorCounting  GovernorSettings  Nonces  PSP22Permit  PSP61  Quorum  TimelockController  Upgradeable  Votes
examples/aft38/target.bkp/ink/: .rustc_info.json  my_aft38.contract  my_aft38.json  my_aft38.wasm
examples/aft38/target.bkp/ink/release/: metadata-gen  metadata-gen.d
examples/aft38/target.bkp/ink/release/.fingerprint/aho-corasick-10bfb50b4aad67ee/: lib-aho_corasick  lib-aho_corasick.json
examples/aft38/target.bkp/ink/wasm32-unknown-unknown/release/: my_aft38.d
lang/codegen/src/: implementation.rs  implementations.rs
src/token/aft34/: mod.rs
src/token/aft34/extensions/: album_storage.rs
src/traits/aft34/: mod.rs
src/traits/aft34/extensions/: album_storage.rs
(+1022 files in other folders)
